# groebner-zx

./: README.md  buchberger.cpp  buchberger.h  buchberger_test.cpp  main.cpp  meson.build  polynomial.cpp  polynomial.h  polynomial_test.cpp
